@@ -1,3 +1,10 @@
+2004-06-05  Edd Dumbill <edd@usefulinc.com>
+
+	* src/DashboardFrontend.cs:
+	* src/PlaylistWindow.cs:
+
+	Generalize dashboard interface.
+
 2004-06-05  Jorn Baayen  <jbaayen@gnome.org>
 
 	* src/Song.cs:
